Revision history for Net-XMPP2

0.11
         - added nickcollision callback
         - fixed some errors in the documentation
         - added a xmpp_datetime_as_timestamp utility function
         - fixed a minor documentation bug in Net::XMPP2::Client
         - removed the init method from the public interface and made
           the stream initiation implicit on connect.

0.10 Wed Dec 12 15:38:58 CET 2007
         - implemented conversation/chat session tracking,
           see Net::XMPP2::Client::send_message and
           Net::XMPP2::IM::Account::send_tracked_message.
         - fixed a race condition with the account adding routine
           of Net::XMPP2::Client.
         - also fixed a small bug in stream initiation, Net::XMPP2 now
           sends a xml declaration again.
         - implemented a very old authentication method which makes Net::XMPP2
           now also work with jabberd 1.4.2. See also the
           'disable_old_jabber_authentication' option in Net::XMPP2::Connection
         - fixed cpan bug #29724 (unpacking the tarball on os x works now
           after renaming devcl -> dev_client).
         - fixed a bug with handling the is_room query in MUC

0.09 Sun Sep 16 09:25:25 CEST 2007
         - fixed a small bug important bug in namespace setting when binding
           a resource. this was a showstopper for eg. jabber.org.

0.08 Sat Sep 15 10:50:00 CEST 2007
         - fixed glitches in tests
         - added disco_info example
         - updated disco_info example, added data form retrieval in disco_info
         - fixed bug in whitespace ping
         - added character filter functions for filtering out not-allowed XML
           chars before sending them to the server. Even though this might be
           a programmer error and shouldn't probably be handled by Net::XMPP2
           I added it for convenience. Hopefully noone is confused.
         - fixed potential bug in ping extension
         - added a sample bot samples/talkbot