@@ -1,6 +1,7 @@
 Revision history for Net-XMPP2
 
 0.11
+         - added some more MUC functions (Net::XMPP2::Ext::MUC::Room::get_users)
          - added nickcollision callback
          - fixed some errors in the documentation
          - added a xmpp_datetime_as_timestamp utility function
